gcc/testsuite/rust/rustc/ui/privacy/private-item-simple.rs
mod a {
    fn f() {}
}

fn main() {
    a::f(); // { dg-error ".E0603." "" { target *-*-* } }
}

